--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -31,7 +31,7 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
-      - run: npm run build
+      - run: npm run build:ci
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
