--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "build:ci": "ng build --deploy-url /time-tracker",
+    "build:ci": "ng build --base-href /time-tracker/",
     "test": "ng test"
   },
   "private": true,
