--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "time-tracker",
+  "name": "worx-time",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "build:ci": "ng build --base-href /time-tracker/",
     "test": "ng test"
   },
   "private": true,
