feat: add linting support with ESLint and Angular ESLint
- Added "lint" script to package.json for linting the codebase.
- Included angular-eslint and eslint as dependencies in package.json.
- Created eslint.config.js for configuring ESLint with Angular and TypeScript rules.

refactor: clean up imports and formatting in app.config.ts

- Removed unused imports and formatted the provideServiceWorker configuration for better readability.

fix: update TimePipe to ignore unused arguments

- Changed the unused parameter name in TimePipe from 'args' to '_args' to follow best practices.

chore: remove unused RouterLink import in settings.component.ts

- Cleaned up imports in settings.component.ts by removing the unused RouterLink import.

--- a/angular.json
+++ b/angular.json
@@ -81,11 +81,18 @@
             "styles": ["src/styles.css"],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
+          }
         }
       }
     }
   },
   "cli": {
-    "analytics": "1092eabc-d026-47e5-8757-b65bd0f88da6"
+    "analytics": "1092eabc-d026-47e5-8757-b65bd0f88da6",
+    "schematicCollections": ["angular-eslint"]
   }
 }
